--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja" prefix="og: http://ogp.me/ns#">
 <head>
 <meta charset="utf-8" />
-<title>静岡県揉一ひとえ</title>
+<title>静岡茶揉一ひとえ</title>
 <meta content="IE=edge" http-equiv="X-UA-Compatible" />
 <meta content="telephone=no" name="format-detection" />
 <meta content="width=device-width,initial-scale=1" name="viewport" />
@@ -15,10 +15,11 @@
 <meta content="website" property="og:type" />
 <meta content="" property="og:site_name" />
 <meta content="" property="og:site_url" />
-
 <link href="assets/css/base.css" rel="stylesheet" type="text/css" />
 <link href="assets/css/top.css" rel="stylesheet" type="text/css" />
-
+<link rel="icon" href="./favicon.ico" sizes="32x32">
+<link rel="icon" href="./icon.svg" type="image/svg+xml">
+<link rel="apple-touch-icon" href="./apple-touch-icon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Hina+Mincho&family=Josefin+Slab:ital,wght@1,100..700&family=Noto+Sans:wght@400..900&display=swap" rel="stylesheet">
@@ -27,7 +28,7 @@
 
 <header class="site-header">
     <div class="site-header__inner">
-        <h1 class="site-header__logo"><img src="assets/img/common/logo_clr.svg" alt=""></h1>
+        <h1 class="site-header__logo"><img src="assets/img/common/logo2_clr.svg" alt="静岡茶揉一ひとえ"></h1>
         <button type="button" class="menu-btn"><span><span></span><span></span><span></span></span></button>
         <div class="header-cont">
             <div class="header-cont__inner">
@@ -38,18 +39,22 @@
                         <li class="g-nav__list"><a href="./origin/">産地紹介</a></li>
                     </ul>
                     <div class="logo-cont">
-                        <figure><img src="assets/img/common/logo_clr.svg" alt=""></figure>
+                        <figure>
+                            <picture>
+                                <source media="(min-width:769px)" srcset="assets/img/common/logo_clr.svg">
+                                <img src="assets/img/common/logo3_clr.svg" alt="静岡茶揉一ひとえ">
+                            </picture>
+                        </figure>
                         <a href="#" target="_blank"><img src="assets/img/common/gnav_btn.svg" alt=""></a>
                     </div>
                     <div class="info-cont">
                         <p class="site-footer__ttl">お問い合わせ</p>
                         <p class="site-footer__txt">
-                            JA静岡経済連 くらし支援部 生活葬祭課（※お電話での注文は受け付けておりません。）<br>
-                            電話054-284-9740　メールの場合は、<a href="mailto:TENPO@kei.ja-shizuoka.or.jp">こちら</a>からお問い合わせください。
+                            JA静岡経済連 くらし支援部 生活葬祭課<br class="sp-show"><span>（※お電話での注文は受け付けておりません。）</span><br>
+                            電話054-284-9740　<br class="sp-show">メールの場合は、<a href="mailto:TENPO@kei.ja-shizuoka.or.jp">こちら</a>からお問い合わせください。
                         </p>
                         <ul class="site-footer__ico">
                             <li><a href="https://x.com/JAtown_teshioya" target="_blank"><img src="assets/img/common/ico_x_clr.svg" alt=""></a></li>
-                            <li><a href="#" target="_blank"><img src="assets/img/common/ico_fb_clr.svg" alt=""></a></li>
                             <li><a href="https://www.instagram.com/shizuoka_keizairen/" target="_blank"><img src="assets/img/common/ico_in_clr.svg" alt=""></a></li>
                             <li><a href="https://www.youtube.com/@ja1588" target="_blank"><img src="assets/img/common/ico_yt_clr.svg" alt=""></a></li>
                             <li class="ja-logo"><a href="https://jashizuoka-keizairen.net" target="_blank"><img src="assets/img/common/logo_ja_clr.svg" alt=""></a></li>
@@ -97,7 +102,7 @@
 </section>
 
 <section class="sec --taste anim fadein">
-    <h2 class="sec__ttl"><span>十一産地の茶葉を厳選ブレンド</span>旨み、甘み、<br class="sp-show">香りをひとつに。</h2>
+    <h2 class="sec__ttl --sm"><span>十一産地の茶葉を厳選ブレンド</span>旨み、甘み、<br class="sp-show">香りをひとつに。</h2>
     <p class="sec__txt">
         静岡県の茶産地のお茶を厳選し、<br>
         バランスよくブレンドした<br class="sp-show">JA静岡経済連の独自ブランド。<br>
@@ -109,7 +114,7 @@
 </section>
 
 <section class="sec --origin --wt anim fadein">
-    <h2 class="sec__ttl">多彩な茶産地の<br class="sp-show">一つ一つが<br>揉一ひとえのふるさと。</h2>
+    <h2 class="sec__ttl --sm">多彩な茶産地の<br class="sp-show">一つ一つが<br>揉一ひとえのふるさと。</h2>
     <p class="sec__txt">
         味わいは静岡県内の<br class="sp-show">さまざまな産地から選び抜かれた<br>
         茶葉の最適なブレンドによって生まれました。<br>
@@ -120,7 +125,7 @@
 
 <section class="shop-area anim fadein">
     <h3 class="shop-area__ttl">SHOP</h3>
-    <ul class="shop-area__list">
+    <ul class="shop-area__list anim fadeincont">
         <li>
             <figure><img src="assets/img/common/shop_thum01.png" alt=""></figure>
             <p>
@@ -130,7 +135,7 @@
         <li>
             <figure><img src="assets/img/common/shop_thum02.png" alt=""></figure>
             <p>
-                インターネット販売<br><a href="https://www.ja-town.com/shop/g/g4301-5601011/" target="_blank">JAタウン しずおか『手しお屋』</a>
+                インターネット販売<br><a href="https://www.ja-town.com/shop/e/e10005469/" target="_blank">JAタウン しずおか『手しお屋』</a>
             </p>
         </li>
         <li>
@@ -159,12 +164,11 @@
         <div class="site-footer__info">
             <p class="site-footer__ttl">お問い合わせ</p>
             <p class="site-footer__txt">
-                JA静岡経済連 くらし支援部 生活葬祭課（※お電話での注文は受け付けておりません。）<br>
-                電話054-284-9740　メールの場合は、<a href="mailto:TENPO@kei.ja-shizuoka.or.jp">こちら</a>からお問い合わせください。
+                JA静岡経済連 くらし支援部 生活葬祭課<br class="sp-show">（※お電話での注文は受け付けておりません。）<br>
+                電話054-284-9740　<br class="sp-show">メールの場合は、<a href="mailto:TENPO@kei.ja-shizuoka.or.jp">こちら</a>からお問い合わせください。
             </p>
             <ul class="site-footer__ico">
                 <li><a href="https://x.com/JAtown_teshioya" target="_blank"><img src="assets/img/common/ico_x.svg" alt=""></a></li>
-                <li><a href="#" target="_blank"><img src="assets/img/common/ico_fb.svg" alt=""></a></li>
                 <li><a href="https://www.instagram.com/shizuoka_keizairen/" target="_blank"><img src="assets/img/common/ico_in.svg" alt=""></a></li>
                 <li><a href="https://www.youtube.com/@ja1588" target="_blank"><img src="assets/img/common/ico_yt.svg" alt=""></a></li>
                 <li class="ja-logo"><a href="https://jashizuoka-keizairen.net" target="_blank"><img src="assets/img/common/logo_ja.svg" alt=""></a></li>
@@ -175,7 +179,25 @@
 </footer>
   
 <script src="assets/js/lib/jquery.min.js"></script>
+<script>
+$(function($){
+    var $header     = $('.buy-btn');
+    
+    scrollCheck();
+    $(window).scroll(scrollCheck);
+    
+    function scrollCheck(){
+        var scrl = $(window).scrollTop();
+        var height = $(window).height();
 
+        if (scrl > height) {
+            $header.fadeIn(500).addClass("cls");
+        } else {
+            $header.fadeOut(500).removeClass("cls");
+        }
+    }
+});
+</script>
 <script src="assets/js/common.js"></script>
 </body>
 </html>
